Added Convergenge Checks to the Demonstration Example

--- a/Workflow_Demonstration/.vscode/settings.json
+++ b/Workflow_Demonstration/.vscode/settings.json
@@ -1,1 +1,7 @@
-{}
+{   
+    "terminal.integrated.fontFamily": "monospace",
+    "julia.additionalArgs": [
+        "--banner=yes"
+    ],
+    "r.lsp.diagnostics": false
+}
